# VGMPlayer

./: .gitmodules  LICENCE.txt  README.md
hw/: .gitignore  VGMPlayer-cache.lib  VGMPlayer.dcm  VGMPlayer.kicad_pcb  VGMPlayer.kicad_prl  VGMPlayer.kicad_pro  VGMPlayer.kicad_sch  VGMPlayer.kicad_sym  VGMPlayer.lib  VGMPlayer.pro  VGMPlayer.sch  fp-info-cache  fp-lib-table  sym-lib-table
hw/VGMPlayer.pretty/: MultiButton.kicad_mod
sw/doc/: Audio System.vsdx  Disk System.vsdx  Main_States.vsdx  VGMPlayer_EC_Main.vsdx  ec_states.vsdx  main_description.docx  main_input.xlsx  main_states.vsdx  main_ui.vsdx  player.psd  ~$$Audio System.~vsdx  ~$$Main_States.~vsdx  ~$$main_ui.~vsdx
sw/ec/: .gitignore  adc.c  adc.h  clock.c  clock.h  config.c  configuration_bits.c  global.c  global.h  i2c.c  i2c.h  interrupt.c  interrupt.h  io.c  io.h  isr.c  isr.h  led.c  led.h  main.c  state.h  state_dfu.c  state_main.c  state_off.c  state_predfu.c  state_premain.c  state_sleep.c  state_timeout.c  stt_charge.c  stt_dfu.c  stt_mainloop.c  stt_off.c  stt_pre_dfu.c  stt_premainloop.c  stt_sleep.c  stt_start.c  stt_wakeup.c  tick.c  tick.h  uplink.c  (+1 more)
sw/ec/nbproject/: configurations.xml  project.xml
sw/ec_tester/: CMakeLists.txt  ec_tester.c
sw/main/: .gitignore  CMakeLists.txt  app.c  app.h  backlight.c  backlight.h  browser.c  catalog.c  catalog.h  decoder_nsf.c  decoder_nsf.h  decoder_s16.c  decoder_s16.h  decoder_vgm.c  decoder_vgm.h  ec.c  ec.h  event.c  event.h  event_ids.h  event_queue.c  event_queue.h  hsm.c  hsm.h  hw_conf.c  hw_conf.h  i2c.c  input.c  input.h  lister.c  lister.h  main.c  my_debug.c  my_debug.h  my_mem.c  my_mem.h  path_utils.c  path_utils.h  player.c  popup.c  (+22 more)
sw/main/bsp/: rp2040_16m.ld  rp2040_audio_16m.ld  rp2040_block_16m.ld  vgmpboard.cmake  vgmpboard.h
sw/main/lib/fatfs/: ffconf.h  ffsystem.c
sw/main/lib/fft_q15/: CMakeLists.txt  arm_common_tables.h  fft_q15.c  fft_q15.h  fft_window.c
sw/main/lib/umm_malloc/: CMakeLists.txt  umm_malloc_cfgport.h
sw/main/lib/umm_malloc/dbglog/: dbglog.h
sw/main/modules/audio/: CMakeLists.txt  audio.c  audio.h  audio_buffer.c  audio_buffer.h  audio_memory.c  cached_file_reader.c  cached_file_reader.h  decoder.h  decoder_s16.c  decoder_s16.h  decoder_vgm.c  decoder_vgm.h  direct_file_reader.c  direct_file_reader.h  file_reader.h  i2s.c  i2s.h  i2s.pio  vgm_conf.h  wm8978.c  wm8978.h  wm8978_reg.h
sw/main/modules/backlight/: CMakeLists.txt  backlight.c  backlight.h
sw/main/modules/battery/: CMakeLists.txt  battery.c  battery.h
sw/main/modules/disk/: CMakeLists.txt  disk.c  disk.h  sdcard_fatfs_io.c  sdcard_ll.c  sdcard_ll.h
sw/main/modules/display/: CMakeLists.txt  browser_icon_file.c  browser_icon_folder.c  browser_icon_nsf.c  display.c  display.h  img_battery_0.c  img_battery_1.c  img_battery_100.c  img_battery_2.c  img_battery_25.c  img_battery_3.c  img_battery_4.c  img_battery_50.c  img_battery_75.c  img_battery_charging.c  img_battery_unknown.c  img_browser_file.c  img_browser_file_raw.c  img_browser_file_vgm.c  img_browser_folder.c  img_browser_nsf.c  img_browser_pagedown.c  img_browser_pageup.c  img_charge.c  img_microsd.c  img_microsd_bad.c  img_microsd_empty.c  img_player_pause.c  img_player_play.c  img_player_top_nes.c  img_player_top_s16.c  img_popup_brightness.c  img_popup_headphone.c  img_popup_speaker.c  img_setting_brightness.c  img_settings_brightness.c  img_vgm_nes.c  lv_conf.h  lvassets.h  (+14 more)
sw/main/modules/ec/: CMakeLists.txt  ec.c  ec.h
sw/main/modules/eeprom/: CMakeLists.txt  eeprom.c  eeprom.h
sw/main/modules/nsf/: CMakeLists.txt  nesapu.c  nesapu.h  nesbus.c  nesbus.h  nescpu.c  nescpu.h  nesfloat.c  nesfloat.h  nsf.c  nsf.h  nsfreader.h  nsfreader_file_fatfs.c  nsfreader_file_fatfs.h  platform.h
sw/main/modules/powerman/: CMakeLists.txt  powerman.c  powerman.h
sw/main/utils/: cie1931.py  spectrum_gen.py  vgz2vgm.py
sw/main/utils/font/: helvR14.bdf
sw/tests/ec_tester/: .gitignore
sw/tests/fsdev/: CMakeLists.txt  hw_conf.c  hw_conf.h  lister.c  main.c  my_debug.c  my_debug.h  my_mem.c  path_utils.c  path_utils.h  sw_conf.c  sw_conf.h  tick.c  tick.h
sw/tests/fsdev/bsp/: vgmpboard.cmake
sw/tests/fsdev/lib/: ffconf.h
sw/tests/fsdev/lib/fatfs/: CMakeLists.txt  ffconf.h  ffsystem.c
sw/tests/fsdev/lib/umm_malloc/: CMakeLists.txt  umm_malloc_cfgport.h
sw/tests/fsdev/modules/disk/: CMakeLists.txt  disk.c  disk.h  sdcard_ll.c
